# network-protocol

./: .gitattributes  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  THREAT_MODEL.md  deny.toml
.github/workflows/: ci.yml
benches/: compression_bench.rs  message_bench.rs  packet_bench.rs
docs/: API.md  CREDITS.md  DEPLOYMENT.md  PERFORMANCE.md  PRINCIPLES.md  README.md  TUNING.md
examples/: serialization_formats.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_compression.rs  fuzz_handshake.rs  fuzz_target_1.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/core/: codec.rs  mod.rs  packet.rs  serialization.rs
src/protocol/: dispatcher.rs  handshake.rs  handshake_old.rs  keepalive.rs  message.rs  mod.rs  tests.rs
src/service/: client.rs  daemon.rs  mod.rs  multiplex.rs  pool.rs  secure.rs  tls_client.rs  tls_daemon.rs
src/service/src/service/: pool_new.rs
src/transport/: cluster.rs  local.rs  mod.rs  quic.rs  remote.rs  session_cache.rs  tls.rs  windows_pipe.rs
src/utils/: buffer_pool.rs  compression.rs  crypto.rs  logging.rs  metrics.rs  mod.rs  replay_cache.rs  time.rs  timeout.rs
tests/: backpressure.rs  chaos.rs  codec_zerocopy.rs  concurrency.rs  config_test.rs  config_validation.rs  dispatcher_bench.rs  edge_cases.rs  integration.rs  perf.rs  property_tests.rs  quic_interface.rs  serialization.rs  shutdown.rs  stress.rs  test_utils.rs  timeouts.rs  tls.rs  windows_pipes.rs
